update => learning who add class in taildwind (fonts)

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 /* Montserrat */
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+/* Roboto Slab */
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;700&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -7,9 +9,6 @@
 
 body {
   background: #202020;
-  font-family: "Montserrat", sans-serif;
-  font-optical-sizing: auto;
-  font-style: normal;
   color: white;
 }
 
@@ -80,6 +79,6 @@ input {
   }
 
   body {
-    @apply bg-background text-foreground;
+    @apply bg-background text-foreground font-montserrat;
   }
 }
